# dspy-hub

./: .gitignore  README.md  pyproject.toml
src/dspy_hub/: __init__.py  cli.py  config.py  hub.py  repository.py
src/dspy_hub/sample_registry/: index.json
