[project]
name = "dspy-hub"
version = "0.1.0"
description = "DSPy Hub CLI and SDK for browsing and publishing DSPy programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [ {name = "Kevin Madura", email = "kmadura@gmail.com"}, ]

[project.scripts]
dspy-hub = "dspy_hub.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dspy_hub = ["sample_registry/**/*"]
